fixtures/frontend/milestone-1/invalid/regex_bad_pattern.aivi
val brokenPattern = rx"(?P<unterminated"
